kubernetes/apps/home-automation/plex/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ugreen-nas-plex
  namespace: home-automation
subsets:
  - addresses:
      - ip: 192.168.50.254
    ports:
      - port: 32400
