kubernetes/apps/home-automation/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ugreen-nas-plex
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 32400
